wrap text, and fix height issue for logos

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -7,11 +7,16 @@
   box-shadow: 5px 10px #4057a1c4;
   color: rgb(58, 54, 54);
   border: 3px solid rgb(41, 58, 105);
+
+}
+
+.tweet:hover .handle {
+  display: inline;
 }
 
 .tweet {
   background-color: #f4f1ec;
-  height: 280px;
+  min-height: 280px;
   padding-top: 20px;
   padding-bottom: 20px;
   border: 3px solid rgb(121, 118, 118);
@@ -22,10 +27,10 @@
 
 .tweetData {
   padding-bottom: 20px;
-
   border-bottom: 3px solid rgb(121, 118, 118);
   font-size: 20px;
   margin: 20px;
+  word-wrap: break-word;
 }
 
 .handle{
